<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timeline_bg"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    tools:context=".NigeriaSendReportActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"></ImageView>

    <ScrollView
        android:layout_width="wrap_content"
         android:layout_height="match_parent"
        android:layout_below="@+id/logo">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/report_textview_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:orientation="vertical">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/date_textview"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/time_textview"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_text_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/popup_bg"
                    android:inputType="date"
                    android:paddingLeft="5dp"
                    android:textColor="@color/category_textview_color" />

                <EditText
                    android:id="@+id/timeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/popup_bg"
                    android:inputType="time"
                    android:paddingLeft="5dp"
                    android:textColor="@color/category_textview_color" />


            </LinearLayout>
            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/question_view_flipper"
                >

            </android.support.v4.view.ViewPager>
            <LinearLayout
                android:id="@+id/upload_pic_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_layout"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
            <Button
                android:id="@+id/upload_pic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_selector"
                android:text="Upload Picture"
                android:textColor="@drawable/button_text_selector"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/uploaded_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_bg_selector"
                android:layout_below="@+id/upload_pic_layout"
                android:text="@string/submit_button_textview"
                android:textColor="@drawable/button_text_selector"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
<!-- From: file:/C:/Users/kritika_pathak/AndroidStudioProjects/NigeriaPldge/app/src/main/res/layout-sw360dp-xhdpi/activity_nigeria_report.xml -->